--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@material-ui/core": "4.11.3",
     "@material-ui/icons": "4.11.2",
+    "aphrodite": "^2.4.0",
     "axios": "^0.21.1",
     "bootstrap": "4.6.0",
     "console": "0.7.2",
@@ -14,11 +15,15 @@
     "mongoose": "5.12.2",
     "react": "16.8.6",
     "react-bootstrap": "1.5.2",
+    "react-date-picker": "^8.1.1",
+    "react-datepicker": "^3.8.0",
     "react-dom": "16.8.6",
     "react-flippy": "0.1.5",
     "react-router-dom": "5.2.0",
     "react-scripts": "^4.0.3",
-    "uuid": "3.3.3"
+    "styled-components": "^5.2.3",
+    "uuid": "3.3.3",
+    "watch": "^1.0.2"
   },
   "devDependencies": {
     "html-webpack-plugin": "^4.5.2",
